--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
