--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "mongoose": "^8.6.1",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -37,6 +38,7 @@
     "@swc/core": "^1.7.21",
     "@swc/helpers": "^0.5.12",
     "@types/js-cookie": "^3.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
