--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -36,6 +38,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/moment": "^2.13.0",
     "@types/node": "^22.5.4",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^10.0.0",
