--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/react-datepicker": "^7.0.0",
     "@types/redux-thunk": "^2.1.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.6.1",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -30,6 +35,8 @@
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.14.0",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "^3.4.10",
     "yup": "^1.4.0"
   },
@@ -38,8 +45,10 @@
     "@swc/core": "^1.7.21",
     "@swc/helpers": "^0.5.12",
     "@types/js-cookie": "^3.0.6",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
     "@types/react": "^18.3.4",
+    "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.10",
