--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,12 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
