--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-datepicker": "^7.0.0",
@@ -21,9 +22,11 @@
     "axios": "^1.7.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.6.1",
+    "pdfjs-dist": "^3.4.120",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
