--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "@types/redux-persist": "^4.3.1",
+    "@types/socket.io-client": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.9.0",
