--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react-datepicker": "^7.0.0",
     "@types/redux-thunk": "^2.1.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.11.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "formik": "^2.4.6",
@@ -47,7 +48,8 @@
     "sweetalert2": "^11.14.0",
     "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "^3.4.10",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zego-zim-web": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
