--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@zegocloud/zego-uikit-prebuilt": "^2.11.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
