--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
@@ -42,11 +43,13 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/moment": "^2.13.0",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.10.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^10.0.0",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
