--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "rotating-file-stream": "^3.2.5",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.0",
     "stripe": "^16.12.0",
@@ -43,6 +44,7 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
